<resources>
    <string name="app_name">Login</string>
    <string name="login_text">Login Page</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Login</string>
    <string name="logout">Logout</string>
    <string name="incorrect">Incorrect credentials</string>
    <string name="attempts">Attempts</string>

    <string name="welcome">%1s</string>
    <string name="accountNum">Cislo uctu</string>
    <string name="paymentsText">Prehled plateb</string>
    <string name="banknum">Kod banky</string>
    <string name="placeholderNum">1234567890</string>
    <string name="placeholderStr">Text</string>
    <string name="placeholderCur">12,345 Kc</string>
    <string name="balanceLabel">Zustatek</string>
    <string name="amount">Castka</string>
    <string name="vs">VS</string>
    <string name="ss">SS</string>
    <string name="ks">KS</string>
    <string name="date">Datum</string>
    <string name="note">Poznamka</string>
    <string name="note2receiver">Zprava prijemci</string>
    <string name="receiver">Protiucet</string>
    <string name="copy_message">Zkopirovat zpravu</string>
    <string name="recipient">/</string>

    <string-array name="bankcodes">
        <item>0100</item>
        <item>0300</item>
        <item>0600</item>
        <item>0710</item>
        <item>0800</item>
        <item>2010</item>
        <item>2100</item>
        <item>2700</item>
        <item>3030</item>
        <item>5500</item>
        <item>6210</item>
        <item>8090</item>
    </string-array>

    <string name="paymentText">Zaplatit</string>
    <string name="payme">Zaplat mi</string>
    <string name="cancel">Zrusit</string>
    <string name="confirm">Potvrdit</string>
    <string name="send">Odeslat</string>

    <string name="numberFormatException">Zadejte cislo</string>
    <string name="save_recipient">Ulozit prijemce</string>
    <string name="select_recipient">Vyberte prijemce</string>
    <string name="new_recipient">Novy prijemce</string>
    <string name="manage_recipients">Sprava prijemcu</string>
    <string name="add_new">Pridat noveho</string>
    <string name="edit">Upravit</string>
    <string name="delete">Smazat</string>
    <string name="name">Jmeno</string>
    <string name="back">Zpet</string>
    <string name="fill_all">Vyplnte vsechna pole</string>
    <string name="recipient_exists">Prijemce s timto jmenem nebo uctem jiz existuje</string>
    <string name="recipient_saved">Prijemce ulozen</string>
    <string name="delete_confirm">Opravdu chcete smazat prijemce %1$s?</string>
</resources>
