<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView_loginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="84dp"
        android:text="@string/login_text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:textSize="30sp"
        android:autofillHints="username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_loginPage" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textSize="30sp"
        android:autofillHints="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_username" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="78dp"
        android:text="@string/submit"
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <TextView
        android:id="@+id/textView_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="48dp"
        android:text="@string/attempts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_attempts"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="@+id/textView_attempts"
        app:layout_constraintStart_toEndOf="@+id/textView_attempts" />
</androidx.constraintlayout.widget.ConstraintLayout>